Fixed up viewport style. Trying to manage Firefox scrollbars.

--- a/public/css/kbase.css
+++ b/public/css/kbase.css
@@ -105,7 +105,6 @@ li > a.disabled {
     right: 20px;
 }
 #datavis {
-    width: 100%;
     height: 100%;
     min-height: 500px;
 }
@@ -146,27 +145,19 @@ li > a.disabled {
     width: 100%;
 }
 .viewport {
-    overflow: scroll;
-}
-.row { margin-bottom: 5px; }
-[class*="span"] { padding-right: 0; }
-.viewport {
     display: inline-block;
     position: relative;
+    padding: 30px 0 5px;
     border: 1px solid #DDD;
     -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    padding: 5px;
-    padding-top: 30px;
-    width: 100%;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
     background-color: white;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 5px;
 }
-.dropdown-menu {
-    max-height: 600px;
-    overflow-y: scroll;
-}
-.viewport::after{
+.viewport::after {
     content: attr(data-title);
     position: absolute;
     top: -1px;
@@ -178,8 +169,15 @@ li > a.disabled {
     border: 1px solid #ddd;
     color: #9da0a4;
     -webkit-border-radius: 4px 0 4px 0;
-    -moz-border-radius: 4px 0 4px 0;
-    border-radius: 4px 0 4px 0;
+       -moz-border-radius: 4px 0 4px 0;
+            border-radius: 4px 0 4px 0;
+}
+.viewport-content {
+    margin: auto 5px;
+    overflow: auto;
+}
+.viewport .viewport-toolbox {
+    margin: 0;
 }
 .viewport-toolbox .dropdown-menu {
     left: auto;
@@ -188,6 +186,10 @@ li > a.disabled {
 }
 .viewport-toolbox .dropdown-menu li {
     font-size: 85%;
+}
+.dropdown-menu {
+    max-height: 600px;
+    overflow-y: scroll;
 }
 .popover p, .popover li {
     line-height: 20px;
@@ -329,6 +331,10 @@ table.table thead .sorting_desc_disabled { background: none; }
 
 table.dataTable th:active {
 	outline: none;
+}
+
+table.dataTable thead th {
+    font-size: 85%;
 }
 
 /* Scrolling */
